--- a/frontend/src/app/layout/skeleton/skeleton.component.css
+++ b/frontend/src/app/layout/skeleton/skeleton.component.css
@@ -1,4 +1,4 @@
 .dsc-skeleton-content {
-  min-height: calc(100vh - 60px - 60px);
+  min-height: calc(100vh - 100px - 177px);
   padding: 0;
 }
